<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utad.apptest.MainActivity">

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:context="utad.apptest.MainActivity">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/btnGuardar"
                android:textSize="9sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/direccionTxt"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlfnTxt" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:layout_marginTop="8dp"
                android:text="@string/btnVolver"
                android:textSize="9sp"
                app:layout_constraintRight_toLeftOf="@+id/btnEditar"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-1dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEditar" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/lblDireccion"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/direccionTxt"
                app:layout_constraintTop_toBottomOf="@+id/tlfnTxt"
                app:layout_constraintVertical_bias="0.52" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblFI"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/direccionTxt" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/btnEditar"
                android:textSize="9sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblEmail"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/mailTxt"
                app:layout_constraintTop_toBottomOf="@+id/nameTxt"
                app:layout_constraintVertical_bias="0.708" />

            <EditText
                android:id="@+id/tlfnTxt"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailTxt" />

            <EditText
                android:id="@+id/mailTxt"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/lblTelefono"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tlfnTxt"
                app:layout_constraintTop_toBottomOf="@+id/mailTxt" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnVolver"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblNombre"
                app:layout_constraintBottom_toTopOf="@+id/mailTxt"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintRight_toLeftOf="@+id/nameTxt"
                app:layout_constraintTop_toBottomOf="@+id/btnVolver" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
